sandbox-codebase/objects/Lead/fields/heymarket__Is_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Is_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate</label>
    <type>Checkbox</type>
</CustomField>