sandbox-codebase/objects/Lead/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <label>Member Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>