sandbox-codebase/objects/Lead/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>