sandbox-codebase/objects/Lead/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High, Medium, Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>